<resources>
    <string name="app_name">Silent Guardian</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="title_activity_threshold_setting">thresholdSettingActivity</string>
    <string name="ProfileInfo">Person</string>

    <!-- TextViews -->
    <!-- General -->
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="enterPW">Enter your password</string>
    <string name="enter">Enter</string>
    <string name="close">Close</string>
    <!-- Main top bar menu -->
    <string name="features">Features</string>
    <string name="switchLanguage">Switch Language</string>
    <string name="editProfile">Edit your profile</string>
    <string name="needHelp">Need Help?</string>
    <string name="connectDevice">Connect your device</string>
    <string name="addGuardians">Add Guardians</string>
    <string name="recordings">My recordings</string>
    <string name="checkInMenu">Check In</string>
    <!-- User defined message fragment -->
    <string name="enterMessage">Enter your message</string>
    <!-- Import contact from phone fragment -->
    <string name="cellPhoneContact">Cell phone contact(s)</string>
    <!-- Send alert message fragment -->
    <string name="sendMessageOne">Alert Level One</string>
    <string name="sendMessageTwo">Alert Level Two</string>
    <!-- Insert contact fragment -->
    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <!-- Main activity -->
    <string name="iAmSafe">I am safe</string>
    <string name="iAmDanger">I am in danger</string>
    <!-- Delete contact from threshold fragment -->
    <string name="deleteFromThreshold">Delete contact from threshold</string>
    <!-- Add 911 to threshold fragment -->
    <string name="add911Explanation">In order to use the "text 911" service, please follow the link provided below to activate and register your phone:</string>
    <string name="policeWebsite">https://www.textwith911.ca/en/how-to-make-a-t9-1-1-call/</string>
    <string name= "explanation2">**911 will be automatically added to the maximun threat level, ie. only contacted for emergencies **</string>
    <!-- Audio activity -->
    <string name="record">Record</string>
    <!-- Profile activity -->
    <string name="enterName">Enter your name</string>
    <string name="enterNewPW">Enter your new password</string>
    <!-- Threshold activity -->
    <string name="allContacts">All contacts</string>
    <string name="clickDots">Click the three dots!</string>
    <string name="add911">Add 911 as a guardian!</string>
    <string name="defineMessage">Define message</string>
    <string name="addContact">Add Contact</string>
    <string name="importContact">Import Contact</string>
    <string name="done">Done</string>
    <!-- All clear activity -->
    <string name="safeLvl1">I AM SAFE: LEVEL ONE</string>
    <string name="safeLvl2">I AM SAFE: LEVEL TWO</string>
    <string name="tellGuardianSafe">Let your Guardians know that you are safe.</string>
    <!-- Check-in activity -->
    <string name="checkIn">Check-in</string>
    <string name="futureAddress">Please enter future address below:</string>
    <string name="setNotif">Please set notification timer below:</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="startTimer">Start Timer</string>
    <string name="resetTimer">Reset Timer</string>
    <!-- Resource activity -->
    <string name="ressources">For more resources, click the following:</string>
    <string name="criminalAct">Victim of a criminal act?</string>
    <string name="missingPerson">Missing Person?</string>
    <string name="helpLine">Helpline</string>
    <!-- Resource one -->
    <string name="victimAct">Victim of a Criminal Act</string>
    <string name="crisis">Crisis Intervention Center</string>
    <string name="ivac">IVAC (Compensation for Victims of Criminal Acts)</string>
    <string name="immigrants">Immigrants and refugees</string>
    <!-- Resource two -->
    <string name="missingNumber">Missing Person (toll-free number)</string>
    <string name="canadianHuman">Canadian Human Trafficking Hotline</string>
    <string name="murdered">Murdered or missing people\n(Association for families of murdered or missing people)</string>
    <!-- Resource three -->
    <string name="helplineFreeNumber">Helpline (toll-free number)</string>
    <string name="sexualAssault">Sexual Assault Provincial Helpline</string>
    <string name="seniors">Seniors (Elder Mistreatment Helpline)</string>
    <string name="suicide">S.O.S Suicide Jeunesse</string>
    <string name="domesticViolence">S.O.S Domestic Violence</string>
    <!-- Toast messages -->
    <string name="noTime">No time indicated!</string>
    <string name="addressSaved">Address has been saved!</string>
    <string name="checkInSaved">Check-in has been registered!</string>
    <string name="contactexist">Contact Already exists</string>
    <string name="contactAdded">Contact Added successfully!</string>
    <string name="thresholdOneMessage">Level One message = </string>
    <string name="thresholdTwoMessage">Level Two message = </string>
    <string name="pleaseAddContact">Please add contacts before proceeding</string>
    <string name="createProfile">Create a profile first !</string>
    <string name="invslidInput">Invalid Input !</string>
    <string name="audioDisable">Audio Recording has been disable</string>
    <string name="audioEnable">Audio Recording has been enabled</string>
    <string name="authentification">Authentication Failed: Incorrect Password, Try Again</string>
    <!-- TextViews -->

    <!-- Bluetooth -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="bluetooth_notif_title">Silent Guardians connected.</string>
    <string name="bluetooth_notif_text">Your device is ready to be used.</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>
    <string name="guardian_activity_tutorial_title">Press the top-right icon to assign your contacts to your Guardian Levels !</string>
    <string name="end_tutorial_button_text">Got it!</string>
    <string name="tutorial_create_profile">Create my profile</string>
    <string name="skip">Skip</string>
    <string name="connect_your_device">Connect your device</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="need_help">Need Help?</string>
    <string name="settings">Settings</string>
    <string name="switch_language">Switch Language</string>
    <string name="toggle_audio_recording">Toggle Audio Recording</string>
    <string name="add_guardians">Add Guardians</string>
    <string name="features_main">features</string>
    <string name="check_in">Check In</string>
    <string name="my_recordings">My Recordings</string>

</resources>
